--- a/CSS flex/index.html
+++ b/CSS flex/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Flex</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <h1>CSS Flex</h1>
-</body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <style>
+    .title {
+      text-align: center;
+      font-size: 50px;
+      font-weight: bold;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .item {
+      flex: 0 1 100%;
+      height: 200px;
+    }
+
+    .container-1-1 {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 100%;
+    }
+
+    .container-1-2 {
+      display: flex;
+      flex-basis: 100%;
+    }
+    .a {
+      background-color: rgb(255, 13, 158);
+      color: #fff;
+    }
+    .b {
+      background-color: rgb(20, 153, 255);
+    }
+    .c {
+      background-color: rgb(24, 0, 147);
+      color: #fff;
+    }
+    .d {
+      background-color: rgb(45, 171, 0);
+      color: #fff;
+    }
+    @media (min-width : 768px) {
+      .container-1-1{
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex-basis: 60%;
+      }
+      .container-1-2{
+        flex-basis: 40%;
+      }
+      .a{
+        flex-basis: 50%;
+      }
+      .b{
+        flex-basis: 50%;
+      }
+    }
+  </style>
+  <body>
+    <h1 class="title">CSS Flex</h1>
+    <div class="container">
+      <div class="container-1-1">
+        <div class="item a">A</div>
+        <div class="item b">B</div>
+        <div class="item c">D</div>
+      </div>
+      <div class="container-1-2">
+        <div class="item d">C</div>
+      </div>
+    </div>
+  </body>
 </html>
