--- a/CSS Grid/basic_layout.html
+++ b/CSS Grid/basic_layout.html
@@ -11,7 +11,7 @@
         padding: 0;
         box-sizing: border-box;
       }
-      /* .container{
+      .container{
         display: grid;
         height: 100%;
         grid-template-columns: repeat(12, 1fr);
@@ -20,9 +20,9 @@
       .header{
         grid-column-start: 2;
         grid-column-end: -1;
-        same as
+        /* same as
         grid-column : 1/3
-        grid-column : 1/-1
+        grid-column : 1/-1 */
       }
       .content{
         grid-column: 2/-1;
@@ -32,17 +32,17 @@
       }
       .footer{
         grid-column: 1/-1;
-      } */
+      }
       /* Same as */
-      .container{
+      /* .container{
         display: grid;
         height: 100%;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: 50px 1fr 50px;
         grid-template-areas: 
-        "h h h h h h h h h h h h"
+        "h h h h h h h h h h h ."
         "m m c c c c c c c c c c"
-        "f f f f f f f f f f f f"
+        ". f f f f f f f f f f ."
         ;
       }
       .header{
@@ -56,7 +56,7 @@
       }
       .footer{
         grid-area: f;
-      }
+      } */
     </style>
   </head>
   <body>
