--- a/CSS Grid/another_layout.html
+++ b/CSS Grid/another_layout.html
@@ -6,11 +6,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="base.css">
     <style>
-        .container{
+        /* .container{
             display: grid;
             height: 100vh;
             grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
-            grid-template-rows: repeat(2, 1fr);
+            grid-template-rows: repeat(1, 1fr);
+            grid-auto-rows: 1fr;
+        } */
+        .container{
+            display: grid;
+            height: 100vh;
+            grid-template-columns: repeat(5, 100px);
+            grid-template-rows: repeat(2, 100px);
+            grid-gap: 5px;
+            justify-content: center;
+            align-content: center;
         }
     </style>
 </head>
