--- a/CSS Grid/another_layout.html
+++ b/CSS Grid/another_layout.html
@@ -13,7 +13,7 @@
             grid-template-rows: repeat(1, 1fr);
             grid-auto-rows: 1fr;
         } */
-        .container{
+        /* .container{
             display: grid;
             height: 100vh;
             grid-template-columns: repeat(5, 100px);
@@ -21,6 +21,20 @@
             grid-gap: 5px;
             justify-content: center;
             align-content: center;
+        } */
+        .container{
+            display: grid;
+            height: 100vh;
+            grid-template-columns: repeat(5, 100px);
+            grid-template-rows: repeat(2, 100px);
+            grid-gap: 5px;
+            /* to access the items */
+            /* justify-items: center;
+            align-items: center; */
+        }
+        /* justify selfs */
+        .seven{
+            justify-self: center;
         }
     </style>
 </head>
@@ -32,7 +46,7 @@
         <div>4</div>
         <div>5</div>
         <div>6</div>
-        <div>7</div>
+        <div class="seven">7</div>
         <div>8</div>
         <div>9</div>
         <div>10</div>
